index da aula do dia 03/11/2025

--- a/lista-tarefas/test.css
+++ b/lista-tarefas/test.css
@@ -8,23 +8,23 @@ h1 {
 }
 h2 {
   color: white;
-  text-align: center;
+  text-align: left;
 }
 h3 {
   color: white;
-  text-align: center;
+  text-align: left;
 }
 h4 {
   color: white;
-  text-align: center;
+  text-align: left;
 }
 h5 {
   color: white;
-  text-align: center;
+  text-align: left;
 }
 h6 {
   color: white;
-  text-align: center;
+  text-align: left;
 }
 
 p {
