--- a/lista-tarefas/test.css
+++ b/lista-tarefas/test.css
@@ -1,33 +1,18 @@
 body {
-  background-color: rgb(0, 191, 255);
+  background-color: rgb(0, 0, 0);
 }
-
-h1 {
-  color: white;
+.h{
+  color: gray;
   text-align: center;
-}
-h2 {
-  color: white;
-  text-align: left;
-}
-h3 {
-  color: white;
-  text-align: left;
-}
-h4 {
-  color: white;
-  text-align: left;
-}
-h5 {
-  color: white;
-  text-align: left;
-}
-h6 {
-  color: white;
-  text-align: left;
-}
-
-p {
-  font-family: verdana;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
 }
+
+.login{
+  border-radius: 25px;
+  padding: 10px;
+  margin: 0 auto;
+  display: block;
+  
+}
+
