--- a/lista-tarefas/css/style.css
+++ b/lista-tarefas/css/style.css
@@ -44,7 +44,7 @@ body{
     color: gray;
 }
 #btn-add{
-    background-color: gray;
+    background-color: transparent;
     padding: 8px;
     border: 0;
     border-radius: 8px;
