--- a/node-aula01/public/css/style.css
+++ b/node-aula01/public/css/style.css
@@ -5,18 +5,21 @@ h1{
     color: wheat;
     text-align: center;
 }
-.centralizar{
+/* Sugestão: Renomear a classe para descrever melhor sua função, 
+   já que "centralizar" está alinhando o texto à esquerda. */
+.texto-destaque-esquerda{
     text-align: left;
     color: blanchedalmond;
-    
 }
-.textosItalia{
+
+/* Sugestão: Usar nomes de classes mais genéricos para reutilização. */
+.bloco-texto {
     text-align: left;
     display: inline-block;
+}
+
+.bloco-texto.com-margem {
     padding-left: 2%;
 }
-.textosPaisagem{
-    text-align: left;
-    display: inline-block;
-    padding-left: 0%;
-}
+/* A propriedade "padding-left: 0" é o padrão, então a classe 
+   .textosPaisagem pode ser substituída por .bloco-texto sem margem. */
